  Fixed issue MR-446 - Putty saved sessions show in connection panel
  Fixed issue MR-459 - Maximized -> Minimized -> Restored results in mangled active display
  Fixed issue MR-463 - Add support for LoadBalanceInfo to RDP
  Fixed issue MR-470 - Quick Connect to Linux server uses invalid credentials
  Fixed issue MR-471 - PuTTY Saved Sessions disappears from connection list
  Added PuTTY Session Settings command to the Config panel for PuTTY Saved Sessions.
  Updated translations.
  Added Norwegian (Bokmål) and Portuguese (Brazil) translations.
  Added Spanish translation to the installer.
  Fixed an exception or crash when choosing unnamed colors for themes.
  Fixed possible error "Control does not support transparent background colors" when modifying themes.
  Fixed changes to the active theme not being saved reliably.
  Fixed handling of the plus (+) character in PuTTY session names.
  Changed Internet Explorer to no longer force IE7 compatibility mode.
  Changed the "Launch PuTTY" button in the "Options" dialog to open PuTTY from the path the user has currently set, instead of what was previously saved.
  Improved update and announcement checking.
  Improved the PuTTY Saved Sessions list to update automatically when any changes are made.
  Improved loading time of large connection files.
  Lowered required version of RDC from 6.1 to 6.0.

1.71 Beta 3 (2013-03-20):
  Fixed issue MR-397 - Putty disappears from the screen
  Fixed issue MR-398 - Full Screen mode doesn't correctly make use of available space
  Fixed issue MR-402 - scrollbar touch moves putty window
  Fixed issue MR-406 - Items disappear from External Tools toolbar when accessing External Tools panel
  Fixed issue MR-410 - Unhandled exception when clicking New button under Theme
  Fixed issue MR-413 - Can't use aplication
  Fixed new connections having a globe icon.
  Fixed the category names in the themes tab of the options dialog on Windows XP not showing correctly.